--- a/client/view/basis/layout.jade
+++ b/client/view/basis/layout.jade
@@ -1,3 +1,17 @@
-//
-   Created by vladimir on 23.02.16.
-
+doctype
+html(lang="en")
+    head
+        meta(charset="UTF-8")
+        title GitPrestige
+        meta(name="description" content="On GitPrestige you can buy stars and followers on GitHub.")
+        meta(name="keywords" content="GitPrestige, github, star, stars, followers, buy, git, prestige")
+        script(src="/src/scripts/main.js")
+        link(rel="stylesheet/less" href="/src/style/main.less")
+        script(src="/src/scripts/less.js")
+    body
+        header
+            section.wrapper
+                img.logo_img(src="/src/images/logo.png" alt="logo")
+        section.content
+            section.wrapper
+                block content
