--- a/client/view/main/adding.jade
+++ b/client/view/main/adding.jade
@@ -4,5 +4,5 @@ block content
     form(method="POST")
         input(type="text" name="login")
         input(type="text" name="pass")
-        input(type="text" name="name")
+        input(type="text" name="mail")
         input(type="submit" value="SUBMIT")
